--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,96 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.12
+awscli==1.16.273
+Babel==2.7.0
+backcall==0.1.0
+botocore==1.13.9
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.2.2
+colorama==0.4.1
+configparser==4.0.2
+coverage==4.5.4
+cycler==0.10.0
+Cython==0.29.14
+decorator==4.4.1
+docutils==0.15.2
+entrypoints==0.3
+flake8==3.7.9
+future==0.18.2
+h5py==2.10.0
+hdbscan==0.8.23
+hyperopt==0.2.2
+idna==2.8
+imagesize==1.1.0
+imbalanced-learn==0.5.0
+imblearn==0.0
+ipykernel==5.1.3
+ipython==7.9.0
+ipython-genutils==0.2.0
+jedi==0.15.1
+Jinja2==2.10.3
+jmespath==0.9.4
+joblib==0.14.0
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+kiwisolver==1.1.0
+Mako==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.2
+mccabe==0.6.1
+networkx==2.4
+numpy==1.17.3
+packaging==19.2
+pandas==0.25.3
+parso==0.5.1
+patsy==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
+prompt-toolkit==2.0.10
+ptyprocess==0.6.0
+pyasn1==0.4.7
+pyclustering==0.9.2
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+Pygments==2.4.2
+pygpu==0.7.6
+pymc3==3.7
+pymongo==3.9.0
+pyparsing==2.4.5
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtWebEngine==5.12.1
+python-dateutil==2.8.1
+python-dotenv==0.10.3
+pytz==2019.3
+PyYAML==5.1.2
+pyzmq==18.1.1
+requests==2.22.0
+rpy2==3.1.0
+rsa==3.4.2
+s3transfer==0.2.1
+scikit-learn==0.21.3
+scipy==1.3.1
+seaborn==0.9.0
+simplegeneric==0.8.1
+six==1.13.0
+snowballstemmer==2.0.0
+Sphinx==2.2.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+-e git+git@github.com:adamingas/peru-rivers@75de327fecb231e48d2a7f8a376a84a7c476ca83#egg=src
+statsmodels==0.10.1
+Theano==1.0.4
+tornado==6.0.3
+tqdm==4.36.1
+traitlets==4.3.3
+tzlocal==2.0.0
+urllib3==1.25.6
+wcwidth==0.1.7
