--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/data/processed/
 
 # exclude results also
 results/
